--- a/lesson_3/index.html
+++ b/lesson_3/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="uk">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/style.css" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
         <title>Lesson 3</title>
     </head>
     <body>
@@ -11,8 +11,8 @@
             <div class="container-body">
                 <div>
                     <h1>HTML</h1>
-                    <hr />
-                    <p>Матеріал з Вікіпедії — вільної енциклопедії.</p>
+                    <hr>
+                    <p>Матеріал з <a href="https://uk.wikipedia.org/wiki/HTML">Вікіпедії</a> — вільної енциклопедії.</p>
                 </div>
             </div>
         </header>
@@ -102,7 +102,7 @@
                     </ul>
                 </div>
                 <div class="block-img">
-                    <img class="img-small" src="img/HTML5.png" alt="HTML5" />
+                    <img class="img-small" src="img/HTML5.png" alt="HTML5">
                 </div>
             </div>
             <div class="container-body">
@@ -143,6 +143,6 @@
         </main>
         <footer></footer>
 
-        <link rel="stylesheet" href="js/script.js" />
+        <link rel="stylesheet" href="js/script.js">
     </body>
 </html>
