--- a/lesson_3/index.html
+++ b/lesson_3/index.html
@@ -246,8 +246,7 @@
                                     натиснення на яку викликає перехід на іншу
                                     сторінку чи іншу частину поточної сторінки.
                                 </span>
-                            </span>
-                            &nbsp; ;
+                            </span>;
                         </li>
                         <li>створення інтерактивних форм;</li>
                         <li>
