--- a/lesson_3/index.html
+++ b/lesson_3/index.html
@@ -272,8 +272,7 @@
                                     натиснення на яку викликає перехід на іншу
                                     сторінку чи іншу частину поточної сторінки.
                                 </span>
-                            </span>
-                            &nbsp; ;
+                            </span>;
                         </li>
                         <li>створення інтерактивних форм;</li>
                         <li>
@@ -333,11 +332,9 @@
                                 title="INQUIRE (Ще не написано)">
                                 INQUIRE
                             </a>
-                        </i>
-                        , яка мала полегшити сумісне користування документами
+                        </i>, яка мала полегшити сумісне користування документами
                         для дослідників
-                        <i lang="en">CERN</i>
-                        .
+                        <i lang="en">CERN</i>.
                     </p>
                     <p>
                         1989 року Бернерс-Лі запропонував впровадити на базі
@@ -398,8 +395,7 @@
                                     class="tooltip-img"
                                     src="img/browser.png"
                                     alt="browser" >
-                                <b>Бра́узер</b>
-                                , також бравзер, переглядач, вебпереглядач,
+                                <b>Бра́узер</b>, також бравзер, переглядач, вебпереглядач,
                                 вебоглядач[1], вебнавігатор (англ. browser МФА:
                                 [ˈbraʊ̯zɚ]) — програмне забезпечення для
                                 комп'ютера або іншого електронного пристрою, як
@@ -456,8 +452,7 @@
                                 Тімом Бернерсом-Лі розробив технологію
                                 Всесвітнього павутиння.
                             </span>
-                        </span>
-                        , інженер інформаційних систем CERN, подали спільну
+                        </span>, інженер інформаційних систем CERN, подали спільну
                         заявку на фінансування проєкту, проте цей проєкт не був
                         офіційно прийнятий CERN.
                     </p>
@@ -552,9 +547,7 @@
                         <a
                             target="_blank"
                             href="http://www.w3.org/MarkUp/draft-ietf-iiir-html-01.txt">
-                            «
-                            <i lang="en">Hypertext Markup Language (HTML)</i>
-                            » Internet-проєкт
+                            «<i lang="en">Hypertext Markup Language (HTML)</i>» Internet-проєкт
                         </a>
                         <span class="text-small">
                             [
@@ -728,9 +721,7 @@
                                 розроблених спільними зусиллями делегатів від
                                 різних країн.
                             </span>
-                        </span>
-                        /
-                        <span class="tooltip">
+                        </span>/<span class="tooltip">
                             <a
                                 target="_blank"
                                 href="https://uk.wikipedia.org/wiki/%D0%9C%D1%96%D0%B6%D0%BD%D0%B0%D1%80%D0%BE%D0%B4%D0%BD%D0%B0_%D0%B5%D0%BB%D0%B5%D0%BA%D1%82%D1%80%D0%BE%D1%82%D0%B5%D1%85%D0%BD%D1%96%D1%87%D0%BD%D0%B0_%D0%BA%D0%BE%D0%BC%D1%96%D1%81%D1%96%D1%8F">
@@ -1018,10 +1009,9 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-            <div>
-                <h2>Документ HTML</h2>
-                <hr >
+                <div>
+                    <h2>Документ HTML</h2>
+                </div>
             </div>
             <div class="container">
                 <p>
