--- a/lesson_3/index.html
+++ b/lesson_3/index.html
@@ -130,8 +130,7 @@
                         Елементи
                         <b>HTML</b>
                         є будівельними блоками сторінок
-                        <b>HTML</b>
-                        . За допомогою конструкцій
+                        <b>HTML</b>. За допомогою конструкцій
                         <b>HTML</b>
                         , зображення та інші об'єкти, такі як
                         <a
@@ -500,7 +499,7 @@
                         <a
                             target="_blank"
                             href="https://uk.wikipedia.org/wiki/SGML"
-                            title="Станда́ртна узага́льнена мо́ва розмі́тки — метамова, за допомогою якої можна визначати мову розмітки для документів. SGML — нащадок розробленої 1960 року в IBM мови GML, яку не варто плутати з Geography Markup Language, яку розробляв Open GIS Consortium .">
+                            title="Станда́ртна узага́льнена мо́ва розмі́тки — метамова, за допомогою якої можна визначати мову розмітки для документів. SGML — нащадок розробленої 1960 року в IBM мови GML, яку не варто плутати з Geography Markup Language, яку розробляв Open GIS Consortium.">
                             SGML
                         </a>
                         -формату документації CERN. Одинадцять із тих елементів
@@ -580,8 +579,7 @@
                                     Інтернет-архів, що базується в
                                     Сан-Франциско.
                                 </span>
-                            </span>
-                            .]
+                            </span>.]
                         </span>
                         , авторами якої були Тім Бернерс-Лі та Ден Конолі. Ця
                         специфікація вже містила визначення типу документа, яке
@@ -650,8 +648,7 @@
                         На початку 1994 року, після того, як проєкти «HTML» і
                         «HTML+» втратили свою силу, IETF створив Робочу групу
                         HTML (
-                        <i lang="en">HTML Working Group</i>
-                        ). 1995 року Робоча група HTML завершила роботу над
+                        <i lang="en">HTML Working Group</i>). 1995 року Робоча група HTML завершила роботу над
                         документом «HTML 2.0» (опублікований як
                         <a
                             target="_blank"
@@ -890,8 +887,7 @@
                                 href="https://uk.wikipedia.org/wiki/%D0%90%D0%BF%D0%BB%D0%B5%D1%82"
                                 title="Апле́т (англ. Applet) — коротка комп'ютерна програма, що функціонально розширює можливості основної програми, або інтернет-застосування. Наприклад, додає в вебсторінку функцію анімації. Для створення аплетів в мережі Інтернет використовується мова програмування Java.">
                                 аплетів
-                            </a>
-                            .
+                            </a>.
                         </li>
                         <li>
                             <b>HTML 4.0</b>
@@ -984,8 +980,7 @@
                                     складається із текстових знаків, і придатний
                                     до читання людиною.
                                 </span>
-                            </span>
-                            ].
+                            </span>.
                             <a
                                 target="_blank"
                                 href="https://uk.wikipedia.org/wiki/1_%D1%81%D0%B5%D1%80%D0%BF%D0%BD%D1%8F"
@@ -1018,7 +1013,7 @@
                     Для поліпшення взаємодії
                     <a
                         href="https://uk.wikipedia.org/wiki/SGML"
-                        title="Станда́ртна узага́льнена мо́ва розмі́тки — метамова, за допомогою якої можна визначати мову розмітки для документів. SGML — нащадок розробленої 1960 року в IBM мови GML, яку не варто плутати з Geography Markup Language, яку розробляв Open GIS Consortium .">
+                        title="Станда́ртна узага́льнена мо́ва розмі́тки — метамова, за допомогою якої можна визначати мову розмітки для документів. SGML — нащадок розробленої 1960 року в IBM мови GML, яку не варто плутати з Geography Markup Language, яку розробляв Open GIS Consortium.">
                         SGML
                     </a>
                     вимагає аби кожна похідна мова (HTML у тому числі) визначала
@@ -1100,8 +1095,7 @@
 Термін, що застосовується для опису схеми документу чи його частини мовою схем DTD.
 Мова схем DTD (DTD schema language) — штучна мова, яку використовують для запису фактичних синтаксичних правил метамови розмітки тексту SGML та XML. З моменту її впровадження інші мови схем для специфікацій, такі як XML Schema та RELAX NG, випускаються з додатковою функціональністю.">
                             DTD
-                        </a>
-                        ).
+                        </a>).
                     </li>
                     <li>
                         Шапка документа (знаходиться в межах елемента head), в
