Прибрав зайві пробіли перез знаками

--- a/lesson_3/index.html
+++ b/lesson_3/index.html
@@ -74,8 +74,7 @@
                                     class="tooltip-img"
                                     src="img/browser.png"
                                     alt="browser" >
-                                <b>Бра́узер</b>
-                                , також
+                                <b>Бра́узер</b>, також
                                 <b>
                                     бравзер, переглядач, вебпереглядач,
                                     вебоглядач[1], вебнавігатор
@@ -131,15 +130,13 @@
                         <b>HTML</b>
                         є будівельними блоками сторінок
                         <b>HTML</b>. За допомогою конструкцій
-                        <b>HTML</b>
-                        , зображення та інші об'єкти, такі як
+                        <b>HTML</b>, зображення та інші об'єкти, такі як
                         <a
                             target="_blank"
                             href="https://uk.wikipedia.org/w/index.php?title=%D0%86%D0%BD%D1%82%D0%B5%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%B2%D0%BD%D1%96_%D1%84%D0%BE%D1%80%D0%BC%D0%B8&action=edit&redlink=1"
                             class="text-red">
                             інтерактивні форми
-                        </a>
-                        , можуть бути вбудовані у візуалізовану сторінку.
+                        </a>, можуть бути вбудовані у візуалізовану сторінку.
                         <b>HTML</b>
                         надає засоби для створення структурованих документів,
                         позначаючи структурну семантику тексту, наприклад
@@ -165,12 +162,10 @@
                             &lt;
                             <span class="text-green">p</span>
                             &gt;
-                        </code>
-                        , оточують текст і надають інформацію про нього, а також
+                        </code>, оточують текст і надають інформацію про нього, а також
                         можуть включати інші теги як піделементи. Браузери не
                         показують теги
-                        <b>HTML</b>
-                        , але використовують їх для інтерпретації вмісту
+                        <b>HTML</b>, але використовують їх для інтерпретації вмісту
                         сторінки.
                     </p>
                     <p>
@@ -182,15 +177,14 @@
                             href="https://uk.wikipedia.org/wiki/%D0%A1%D0%BA%D1%80%D0%B8%D0%BF%D1%82%D0%BE%D0%B2%D0%B0_%D0%BC%D0%BE%D0%B2%D0%B0"
                             title="Скриптова мова (англ. scripting language) — мова програмування, розроблена для запису «сценаріїв», послідовностей операцій, які користувач може виконувати на комп'ютері. Прості скриптові мови раніше часто називали мовами пакетної обробки (batch languages або job control languages). Сценарії зазвичай інтерпретуються, а не компілюються.">
                             скриптових мовах
-                        </a>
-                        , наприклад
+                        </a>, наприклад
                         <a
                             target="_blank"
                             href="https://uk.wikipedia.org/wiki/JavaScript"
                             title="JavaScript (JS) — динамічна, об'єктно-орієнтована[5] прототипна мова програмування. Реалізація стандарту ECMAScript. Найчастіше використовується для створення сценаріїв вебсторінок, що надає можливість на боці клієнта (пристрої кінцевого користувача) взаємодіяти з користувачем, керувати браузером, асинхронно обмінюватися даними з сервером, змінювати структуру та зовнішній вигляд вебсторінки.">
                             JavaScript
-                        </a>
-                        , які впливають на поведінку та вміст вебсторінок.
+                        </a>,
+                        які впливають на поведінку та вміст вебсторінок.
                         Включення
                         <b>CSS</b>
                         визначає вигляд і компонування вмісту.
@@ -218,8 +212,7 @@
                         (W3C), який супроводжує стандарти
                         <b>HTML</b>
                         та
-                        <b>CSS</b>
-                        , заохочує використання
+                        <b>CSS</b>, заохочує використання
                         <b>CSS</b>
                         над явним презентаційним
                         <b>HTML</b>
@@ -265,8 +258,7 @@
                                         class="tooltip-img"
                                         src="img/hyperlink.png"
                                         alt="monitor" >
-                                    <b>Гіперпосила́ння</b>
-                                    , або просто посила́ння — активний текст,
+                                    <b>Гіперпосила́ння</b>, або просто посила́ння — активний текст,
                                     зображення чи кнопка на вебсторінці,
                                     натиснення на яку викликає перехід на іншу
                                     сторінку чи іншу частину поточної сторінки.
@@ -313,8 +305,7 @@
                                 з Робертом Кайо)[5], автор концепції семантичної
                                 павутини. Лауреат премії Тюрінга 2016 року.
                             </span>
-                        </span>
-                        , який на той час був співробітником
+                        </span>, який на той час був співробітником
                         <i lang="en">
                             <a
                                 target="_blank"
@@ -322,8 +313,7 @@
                                 title="CERN, Європе́йська організація з я́дерних дослі́джень (ЦЕРН) — міжнародний дослідницький центр європейської спільноти, найбільша у світі лабораторія фізики високих енергій.">
                                 CERN
                             </a>
-                        </i>
-                        , запропонував і прототипував систему
+                        </i>, запропонував і прототипував систему
                         <i lang="en">
                             <a
                                 target="_blank"
@@ -580,8 +570,7 @@
                                     Сан-Франциско.
                                 </span>
                             </span>.]
-                        </span>
-                        , авторами якої були Тім Бернерс-Лі та Ден Конолі. Ця
+                        </span>, авторами якої були Тім Бернерс-Лі та Ден Конолі. Ця
                         специфікація вже містила визначення типу документа, яке
                         чітко зазначало граматику HTML.
                         <sup>
@@ -695,8 +684,7 @@
                                 павутиння, що він його очолює. Станом на квітень
                                 2001 року організація налічувала 5 учасників.
                             </span>
-                        </span>
-                        , враховуючи доповнення до розмітки, що впроваджувалися
+                        </span>, враховуючи доповнення до розмітки, що впроваджувалися
                         компаніями-розробниками браузерів. Тим не менш, у
                         <a target="_blank" href="#">2000</a>
                         році HTML стала міжнародним стандартом (
