--- a/lesson_7/index.html
+++ b/lesson_7/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <header class="header">
+    <header class="header">
+            <div class="wrapper">
             <ul class="nav">
                 <li><a href="index.html"><img class="logo" src="img/logo.png" alt="logo lesson 7" title="Переход на главную страницу"></a></li>
                 <li><a href="#licencing">Licencing</a></li>
@@ -20,8 +20,9 @@
                 <li><a href="#article">Article</a></li>
                 <li><a href="#footer"><img src="img/down.jpg" width="80" alt="info footer" title="Переход вниз"></a></li>
             </ul>
-        </header>
+        </div></header>
         <main>
+            <div class="wrapper">
             <!-- =========licencing============ -->
             <div id="licencing">
                 <div class="subtitle">
@@ -183,7 +184,7 @@
                 </div>
                 <h3 class="article__lead">Основные свойства Grid Layout</h3>
                 <ul class="article__list">
-                    <li><span class="stylized">display: grid;:</span> Определяет
+                    <li><span class="stylized">display: grid;</span> Определяет
                         элемент-контейнер как сетчатый контейнер.
                     </li>
                     <li><span class="stylized">grid-template-columns</span> и
@@ -222,8 +223,9 @@
                     </li>
                 </ul>
             </div>
-        </main>
+        </div></main>
         <footer class="footer" id="footer">
+            <div class="wrapper">
             <ul class="nav">
                 <li><a href="index.html"><img src="img/logo.png" width="80" alt="logo lesson 7" title="Переход на главную страницу"></a></li>
                 <li><a href="#licencing">Licencing</a></li>
@@ -233,8 +235,8 @@
                 <li><a href="#article">Article</a></li>
             </ul>
             <p class="copyright__text">&copy; 2023 Ukraine Zone</p>
+        </div>
         </footer>
-    </div>
 </body>
 
 </html>
