--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -7,150 +7,152 @@
         <title>lesson 9</title>
     </head>
     <body>
-        <header class="header">
-            <div class="container">
-                <div class="header__wrapper">
-                    <div class="header__text">
-                        lesson 9
-                        <span>Pseudo-elements</span>
-                    </div>
-                    <div class="header__btn btn__header">
-                        <a class="btn__header-item fill" href="#block-1">
-                            Block 1
-                        </a>
-                        <a class="btn__header-item pulse" href="#block-2">
-                            Block 2
-                        </a>
-                        <a class="btn__header-item close" href="#block-3">
-                            Block 3
-                        </a>
-                        <a class="btn__header-item raise" href="#block-4">
-                            Block 4
-                        </a>
+        <div class="wraper">
+            <header class="header">
+                <div class="container">
+                    <div class="header__wrapper">
+                        <div class="header__text">
+                            lesson 9
+                            <span>Pseudo-elements</span>
+                        </div>
+                        <div class="header__btn btn__header">
+                            <a class="btn__header-item fill" href="#block-1">
+                                Block 1
+                            </a>
+                            <a class="btn__header-item pulse" href="#block-2">
+                                Block 2
+                            </a>
+                            <a class="btn__header-item close" href="#block-3">
+                                Block 3
+                            </a>
+                            <a class="btn__header-item raise" href="#block-4">
+                                Block 4
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </header>
-        <main>
-            <div class="container">
-                <div class="first block-1" id="block-1">
-                    <div class="first__top">
-                        <div class="top__info">
-                            <h2 class="top__title title">
-                                Why Us For International Business Management
-                                Consulting!
-                            </h2>
-                            <div class="top__text text">
-                                <p>
-                                    Completely synergized resourced taxings
-                                    relationships premiers markets ultivate
-                                    one-to-one customer service with robust
-                                    ideas dynamically innovated resources
-                                    leveling customer service for state of the
-                                    art customer service innovate product for
-                                    reliable supply engage web services
-                                    cutting-edge deliverables.
-                                </p>
-                            </div>
-                            <div class="top__block block__top">
-                                <h5 class="block__top-title title-color">
-                                    Proactively envisioned multimedia based
-                                    expertise media growth superior
-                                    collaboration.
-                                </h5>
-                                <div class="block__top-text text">
+            </header>
+            <main class="main">
+                <div class="container">
+                    <div class="first block-1" id="block-1">
+                        <div class="first__top">
+                            <div class="top__info">
+                                <h2 class="top__title title">
+                                    Why Us For International Business Management
+                                    Consulting!
+                                </h2>
+                                <div class="top__text text">
                                     <p>
-                                        One-to-one customer service with robust
+                                        Completely synergized resourced taxings
+                                        relationships premiers markets ultivate
+                                        one-to-one customer service with robust
                                         ideas dynamically innovated resources
-                                        for reliable supply engage web services
+                                        leveling customer service for state of the
+                                        art customer service innovate product for
+                                        reliable supply engage web services
                                         cutting-edge deliverables.
                                     </p>
                                 </div>
+                                <div class="top__block block__top">
+                                    <h5 class="block__top-title title-color">
+                                        Proactively envisioned multimedia based
+                                        expertise media growth superior
+                                        collaboration.
+                                    </h5>
+                                    <div class="block__top-text text">
+                                        <p>
+                                            One-to-one customer service with robust
+                                            ideas dynamically innovated resources
+                                            for reliable supply engage web services
+                                            cutting-edge deliverables.
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="first__main main__first">
-                        <div class="main__image">
-                            <img src="img/block-1_1.png" alt="Workplace" />
-                        </div>
-                        <div class="main__block block__main">
-                            <h2 class="main__title title">Our benefits</h2>
-                            <h5 class="main__sub-title title-color">
-                                Incubate standards compliant channels benefits.
-                            </h5>
-                            <ul class="main__list">
-                                <li class="list__item">
-                                    Credibly reintermediate backend
-                                </li>
-                                <li class="list__item">
-                                    Holistically foster superior
-                                </li>
-                                <li class="list__item">
-                                    Distinctively exploit optimal
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="first__footer footer__first">
-                        <h2 class="footer__title title">
-                            Frequently Asked Questions
-                        </h2>
-                        <div class="footer__text text">
-                            <p>
-                                Leveling customer service for state of the art
-                                customer service innovate product for reliable
-                                supply engage web services cutting-edge
-                                deliverables.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="second block-2" id="block-2">
-                    <h5 class="second__sub-title">Welcome Whitecollar</h5>
-                    <h2 class="second__title">
-                        We Care About Your Business Plan.
-                    </h2>
-                    <div class="second__text text">
-                        <p>
-                            Leverage agile frameworks to provide a robust
-                            synopsis for high level overviews.Iterative
-                            approaches to corporate strategy foster
-                            collaborative thinking to further the overal.
-                        </p>
-                        <p>
-                            Leverage agile frameworks to provide a robust
-                            synopsis for high level overviews.Iterative
-                            approaches to corporate strategy
-                        </p>
-                    </div>
-                    <ul class="second__list list__second">
-                        <li>
-                            <div class="list__second-body">
-                              <h4 class="list__title">Our Vision</h4>
-                              <div class="list__text">
-                                  <p>
-                                      Capitalize on low hanging fruit to identify
-                                      a ballpark value added activity to beta
-                                      clickthroughs.
-                                  </p>
-                              </div>
+                        <div class="first__main main__first">
+                            <div class="main__image">
+                                <img src="img/block-1_1.png" alt="Workplace" />
                             </div>
-                        </li>
-                        <li>
-                          <h4 class="list__title">Our Mision</h4>
-                            <div class="list__text">
+                            <div class="main__block block__main">
+                                <h2 class="main__title title">Our benefits</h2>
+                                <h5 class="main__sub-title title-color">
+                                    Incubate standards compliant channels benefits.
+                                </h5>
+                                <ul class="main__list">
+                                    <li class="list__item">
+                                        Credibly reintermediate backend
+                                    </li>
+                                    <li class="list__item">
+                                        Holistically foster superior
+                                    </li>
+                                    <li class="list__item">
+                                        Distinctively exploit optimal
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="first__footer footer__first">
+                            <h2 class="footer__title title">
+                                Frequently Asked Questions
+                            </h2>
+                            <div class="footer__text text">
                                 <p>
-                                    Podcasting operational change management inside of workflows to establish a framework.
+                                    Leveling customer service for state of the art
+                                    customer service innovate product for reliable
+                                    supply engage web services cutting-edge
+                                    deliverables.
                                 </p>
                             </div>
-                        </li>
-                    </ul>
-                    <button class="second__btn">More About Us</button>
+                        </div>
+                    </div>
+                    <div class="second block-2" id="block-2">
+                        <h5 class="second__sub-title">Welcome Whitecollar</h5>
+                        <h2 class="second__title">
+                            We Care About Your Business Plan.
+                        </h2>
+                        <div class="second__text text">
+                            <p>
+                                Leverage agile frameworks to provide a robust
+                                synopsis for high level overviews.Iterative
+                                approaches to corporate strategy foster
+                                collaborative thinking to further the overal.
+                            </p>
+                            <p>
+                                Leverage agile frameworks to provide a robust
+                                synopsis for high level overviews.Iterative
+                                approaches to corporate strategy
+                            </p>
+                        </div>
+                        <ul class="second__list list__second">
+                            <li>
+                                <div class="list__second-body">
+                                  <h4 class="list__title">Our Vision</h4>
+                                  <div class="list__text">
+                                      <p>
+                                          Capitalize on low hanging fruit to identify
+                                          a ballpark value added activity to beta
+                                          clickthroughs.
+                                      </p>
+                                  </div>
+                                </div>
+                            </li>
+                            <li>
+                              <h4 class="list__title">Our Mision</h4>
+                                <div class="list__text">
+                                    <p>
+                                        Podcasting operational change management inside of workflows to establish a framework.
+                                    </p>
+                                </div>
+                            </li>
+                        </ul>
+                        <button class="second__btn">More About Us</button>
+                    </div>
                 </div>
-            </div>
-        </main>
-        <footer>
-          <div class="footer__wrapper"></div>
-        </footer>
+            </main>
+            <footer>
+              <div class="footer__wrapper"></div>
+            </footer>
+        </div>
     </body>
 </html>
