--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -34,7 +34,7 @@
             </header>
             <main class="main">
                 <div class="container">
-                    <div class="first block-1" id="block-1">
+                    <section class="first block-1" id="block-1">
                         <div class="first__top">
                             <div class="top__info">
                                 <h2 class="top__title title">
@@ -47,10 +47,10 @@
                                         relationships premiers markets ultivate
                                         one-to-one customer service with robust
                                         ideas dynamically innovated resources
-                                        leveling customer service for state of the
-                                        art customer service innovate product for
-                                        reliable supply engage web services
-                                        cutting-edge deliverables.
+                                        leveling customer service for state of
+                                        the art customer service innovate
+                                        product for reliable supply engage web
+                                        services cutting-edge deliverables.
                                     </p>
                                 </div>
                                 <div class="top__block block__top">
@@ -61,10 +61,11 @@
                                     </h5>
                                     <div class="block__top-text text">
                                         <p>
-                                            One-to-one customer service with robust
-                                            ideas dynamically innovated resources
-                                            for reliable supply engage web services
-                                            cutting-edge deliverables.
+                                            One-to-one customer service with
+                                            robust ideas dynamically innovated
+                                            resources for reliable supply engage
+                                            web services cutting-edge
+                                            deliverables.
                                         </p>
                                     </div>
                                 </div>
@@ -77,7 +78,8 @@
                             <div class="main__block block__main">
                                 <h2 class="main__title title">Our benefits</h2>
                                 <h5 class="main__sub-title title-color">
-                                    Incubate standards compliant channels benefits.
+                                    Incubate standards compliant channels
+                                    benefits.
                                 </h5>
                                 <ul class="main__list">
                                     <li class="list__item">
@@ -98,16 +100,18 @@
                             </h2>
                             <div class="footer__text text">
                                 <p>
-                                    Leveling customer service for state of the art
-                                    customer service innovate product for reliable
-                                    supply engage web services cutting-edge
-                                    deliverables.
+                                    Leveling customer service for state of the
+                                    art customer service innovate product for
+                                    reliable supply engage web services
+                                    cutting-edge deliverables.
                                 </p>
                             </div>
                         </div>
-                    </div>
-                    <div class="second block-2" id="block-2">
-                        <h5 class="second__sub-title">Welcome Whitecollar</h5>
+                    </section>
+                    <section class="second block-2" id="block-2">
+                        <h5 class="second__sub-title sub-title">
+                            Welcome Whitecollar
+                        </h5>
                         <h2 class="second__title">
                             We Care About Your Business Plan.
                         </h2>
@@ -125,33 +129,77 @@
                             </p>
                         </div>
                         <ul class="second__list list__second">
-                            <li>
-                                <div class="list__second-body">
-                                  <h4 class="list__title">Our Vision</h4>
-                                  <div class="list__text">
-                                      <p>
-                                          Capitalize on low hanging fruit to identify
-                                          a ballpark value added activity to beta
-                                          clickthroughs.
-                                      </p>
-                                  </div>
-                                </div>
-                            </li>
-                            <li>
-                              <h4 class="list__title">Our Mision</h4>
+                            <li class="list__second-body">
+                                <h4 class="list__title">Our Vision</h4>
                                 <div class="list__text">
                                     <p>
-                                        Podcasting operational change management inside of workflows to establish a framework.
+                                        Capitalize on low hanging fruit to
+                                        identify a ballpark value added activity
+                                        to beta clickthroughs.
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="list__second-body">
+                                <h4 class="list__title">Our Mision</h4>
+                                <div class="list__text">
+                                    <p>
+                                        Podcasting operational change management
+                                        inside of workflows to establish a
+                                        framework.
                                     </p>
                                 </div>
                             </li>
                         </ul>
                         <button class="second__btn">More About Us</button>
-                    </div>
+                    </section>
+                    <section class="third block-3" id="block-3">
+                        <div class="third__info">
+                            <h5 class="third__sub-title sub-title">Work Process</h5>
+                            <h2 class="third__title">How We Work</h2>
+                        </div>
+                        <div class="third__box">
+                            <div class="box__item left">
+                                <h4 class="box__item-title">
+                                    Make Appointment
+                                </h4>
+                                <p>
+                                    Leverage agile frameworks provide
+                                    synopsishigh level overviews value
+                                    proposition.
+                                </p>
+                                <a href="#">Testimonials</a>
+                            </div>
+                            <div class="box__item center">
+                                <h4 class="box__item-title">Consultation</h4>
+                                <p>
+                                    Leverage agile frameworks provide
+                                    synopsishigh level overviews value
+                                    proposition.
+                                </p>
+                                <a href="#">Testimonials</a>
+                            </div>
+                            <div class="box__item right">
+                                <h4 class="box__item-title">
+                                    Enjoy the Service
+                                </h4>
+                                <p>
+                                    Leverage agile frameworks provide
+                                    synopsishigh level overviews value
+                                    proposition.
+                                </p>
+                                <a href="#">Testimonials</a>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="fourth block-4" id="block-4"></section>
+                    <!-- <h1 class="main__title-h1">
+                        Клацни на кнопку вище та знизу появиться один з блоків
+                        ДЗ
+                    </h1> -->
                 </div>
             </main>
             <footer>
-              <div class="footer__wrapper"></div>
+                <div class="footer__wrapper"></div>
             </footer>
         </div>
     </body>
