--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -154,7 +154,9 @@
                     </section>
                     <section class="third block-3" id="block-3">
                         <div class="third__info">
-                            <h5 class="third__sub-title sub-title">Work Process</h5>
+                            <h5 class="third__sub-title sub-title">
+                                Work Process
+                            </h5>
                             <h2 class="third__title">How We Work</h2>
                         </div>
                         <div class="third__box">
@@ -191,7 +193,37 @@
                             </div>
                         </div>
                     </section>
-                    <section class="fourth block-4" id="block-4"></section>
+                    <section class="fourth block-4" id="block-4">
+                        <div class="fourth__wrapper">
+                            <h2 class="fourth__title">
+                                We Develop Create Custom Jewels.
+                            </h2>
+                            <div class="fourth__product product-fourth">
+                                <div class="product-left">
+                                    <div class="product-wrap__img"><img src="img/block-4_1.png" alt="ring" /></div>
+                                    <h5 class="product-left__name">
+                                        Embossed hoop earrings
+                                    </h5>
+                                    <div class="product-left__price">
+                                        $144.00
+                                    </div>
+                                </div>
+                                <div class="product-right">
+                                    <a href="#" class="product-right__title">
+                                        <span>#02</span>
+                                        new jewellery collection
+                                    </a>
+                                    <div class="product-wrap__img"><img src="img/block-4_2.png" alt="ring" /></div>
+                                    <a href="#" class="product-right__name">
+                                        Embossed hoop earrings
+                                    </a>
+                                    <div class="product-right__price">
+                                        $144.00
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                     <!-- <h1 class="main__title-h1">
                         Клацни на кнопку вище та знизу появиться один з блоків
                         ДЗ
