--- a/lesson_9/index.html
+++ b/lesson_9/index.html
@@ -28,6 +28,12 @@
                             <a class="btn__header-item raise" href="#block-4">
                                 Block 4
                             </a>
+                            <a class="btn__header-item offset" href="#game">
+                                Game
+                            </a>
+                            <a class="btn__header-item up" href="#practice">
+                                practice
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -224,10 +230,31 @@
                             </div>
                         </div>
                     </section>
-                    <!-- <h1 class="main__title-h1">
-                        Клацни на кнопку вище та знизу появиться один з блоків
-                        ДЗ
-                    </h1> -->
+                    <section class="game" id="game">
+                        <div class="game__wrapper">
+                            <div class="game__body">
+                                <div class="game__start line"></div>
+                                <div class="game__item-1 line"></div>
+                                <div class="game__item-2 line"></div>
+                                <div class="game__item-3 line"></div>
+                                <div class="game__item-4 line"></div>
+                                <div class="game__item-5 line"></div>
+                                <div class="game__item-6 line"></div>
+                                <div class="game__item-7 line"></div>
+                                <div class="game__item-8 line"></div>
+                                <div class="game__item-9 line"></div>
+                                <div class="game__item-10 line"></div>
+                                <div class="game__item-11 line"></div>
+                                <div class="game__item-12 line"></div>
+                                <div class="game__item-13 line"></div>
+                                <div class="game__item-14 line"></div>
+                                <div class="game__item-15 line"></div>
+                                <div class="game__item-16 line"></div>
+                                <div class="game__item-17 line"></div>
+                                
+                            </div>
+                        </div>
+                    </section>
                 </div>
             </main>
             <footer>
